--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h2 class="govuk-heading-m">UI Versions</h2>
-        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
                 <a href="/6-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-6-0</a>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
@@ -48,33 +48,7 @@
         </ul>
     </div>
     <div class="govuk-grid-column-one-third">
-        <h2 class="govuk-heading-m">Manual data</h2>
-        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-            <li>
-                <span class="govuk-!-font-weight-bold">Employers - 2</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li>section snippets added</li>
-                    <li>chapter names updated</li>
-                </ul>
-            </li>
-            <li>
-                <span class="govuk-!-font-weight-bold">Employers - original</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li>missing chapter headings added (without their rules contents)</li>
-                </ul>
-            </li>
-            <li>
-                <span class="govuk-!-font-weight-bold">Providers - 3</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li>section snippets updated</li>
-                </ul>
-            </li>
-            <li><span class="govuk-!-font-weight-bold">Providers - 2 - Updated English and Maths</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li>section snippets added</li>
-                </ul>
-            </li>
-        </ul>
+        {% include "includes/manual-data-notes.html" %}
     </div>
 </div>
 
