--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -19,6 +19,21 @@ $govuk-global-styles: true;
 @import 'manual-frontend/manual-application-print';
 
 /* SVG */
+.svg-1-container {
+    position: relative; 
+    height: 0; 
+    width: 100%; 
+    padding: 0;
+    padding-bottom: 100%; 
+    /* override this inline for aspect ratio other than square */
+}
+.svg-1 {
+    position: absolute; 
+    height: 100%; 
+    width: 100%; 
+    left: 0; 
+    top: 0;
+}
 .svg-1 text {
     color: #0b0c0c;
     font-family: "nta", Arial, sans-serif;
