--- a/app/views/3-0/manual-page.html
+++ b/app/views/3-0/manual-page.html
@@ -76,7 +76,7 @@
                                 {% if myData.svgflow == "true" %}
                                     {% if subsection.id == "support-english-maths-training" %}
                                         <h3 class="govuk-heading-s">Check what English and maths training an apprentice should undertake.</h3>
-                                        {% include "../includes/english-maths-flow-fixed.svg" %}
+                                        {% include "../includes/english-maths-flow-fixed.html" %}
                                     {% endif %}
                                 {% endif %}
                                 <!-- Text decision tree -->
@@ -153,6 +153,8 @@
                                     {% else %}
                                         {% if part.type == "header" %}
                                             <h3 class="govuk-heading-m">{{part.content|safe|trim}}</h3>
+                                        {% elif part.type == "flow" %}
+                                            <!-- nothing -->
                                         {% elif part.type == "block" %}
                                             <h3 class="govuk-heading-s">{{part.title|safe}}</h3>
                                             <p class="govuk-body">
