--- a/app/views/6-0/manual-page.html
+++ b/app/views/6-0/manual-page.html
@@ -234,8 +234,7 @@
                                             {% if subsection.id == "support-english-maths-training" %}
                                                 <!-- Flow chart -->
                                                 {% if myData.svgflow == "true" %}
-                                                    <h3 class="govuk-heading-m">Find out what English and maths training your apprentice should do</h3>
-                                                    {% include "../includes/english-maths-flow-fixed.svg" %}
+                                                    {% include "../includes/english-maths-flow-2-fixed.html" %}
                                                 {% endif %}
                                                 <!-- Text decision tree -->
                                                 {% if myData.textflow == "true" %}
