--- a/app/views/6-0/flow-charts.html
+++ b/app/views/6-0/flow-charts.html
@@ -348,7 +348,7 @@ GOV.UK Manual
                 </span>
             </summary>
             <div class="govuk-details__text">
-                {% include "../includes/english-maths-flow-fixed.svg" %}
+                {% include "../includes/english-maths-flow-fixed.html" %}
             </div>
         </details>
 
