--- a/app/views/includes/english-maths-flow-fixed.html
+++ b/app/views/includes/english-maths-flow-fixed.html
@@ -1,6 +1,6 @@
+<!-- Note: we are using Option 4 from these guidelines; https://css-tricks.com/scale-svg/#article-header-id-10 -->
 <div class="svg-1-container" style="margin-bottom:40px; padding-bottom: 134%">
-    <svg class="svg-1" xmlns="http://www.w3.org/2000/svg" 
-        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 1004 1364" content="&lt;mxfile userAgent=&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.1 Safari/605.1.15&quot; version=&quot;9.4.7&quot; editor=&quot;www.draw.io&quot; type=&quot;google&quot;&gt;&lt;diagram id=&quot;" style="background-color: rgb(255, 255, 255);">
+    <svg class="svg-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 1004 1364" content="&lt;mxfile userAgent=&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.1 Safari/605.1.15&quot; version=&quot;9.4.7&quot; editor=&quot;www.draw.io&quot; type=&quot;google&quot;&gt;&lt;diagram id=&quot;" style="background-color: rgb(255, 255, 255);">
         <defs/>
 
         <!-- 1 -->
