--- a/app/views/includes/english-maths-flow-2-fixed.html
+++ b/app/views/includes/english-maths-flow-2-fixed.html
@@ -12,9 +12,11 @@
                 <tspan x="292" y="49">have at least Level 2</tspan>
                 <tspan x="292" y="74">English and maths?</tspan>
                 <!-- style="color: rgb(99 , 99 , 99)" -->
+            </text>
+            <text class="secondary-colour">
                 <tspan x="294" y="99">This is the same as</tspan>
-                <tspan x="298" y="124">grade E or 2** at</tspan>
-                <tspan x="345" y="149">GCSE.</tspan>
+                <tspan x="287" y="124">at least grade E or 2** </tspan>
+                <tspan x="340" y="149">at GCSE.</tspan>
             </text>
             <!-- Yes 1 -->
             <g>
