--- a/app/views/includes/english-maths-text-flow-2.html
+++ b/app/views/includes/english-maths-text-flow-2.html
@@ -5,7 +5,7 @@
         <ol class="govuk-list govuk-list--number govuk-!-font-size-24">
             <li style="margin-bottom:20px">
                 <span class="">Does the apprentice have at least Level 2 English and maths?</span><br>
-                This is the same as grade E or 2** at GCSE.
+                This is the same as at least grade E or 2** at GCSE.
                 <ul class="govuk-list govuk-list--bullet">
                     <li class="yes">
                         Yes: They do not need to do any more English or maths training.
