--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,12 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
+                <a href="/7-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-7-0</a>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">in progress</span></li>
+                </ul>
+            </li>
+            <li>
                 <a href="/6-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-6-0</a>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">collection/document list page</span> - grouped documents by target user with headings changed e.g. “Training providers", page title, page intro paragraph (moved details from base of page into it), document file names, HTML document thumbnail icon, adding “PDF: ” before the PDF document names</li>
