CCW-422 see all updates page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,7 +6,7 @@
         <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototype</h1>
         <p class="govuk-body">
             <strong class="govuk-tag">
-                ie11 not supported
+                Internet Explorer not supported
             </strong>
         </p>
     </div>
@@ -18,7 +18,7 @@
             <li>
                 <a href="/7-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-7-0</a>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li><span class="govuk-!-font-weight-bold">in progress</span></li>
+                    <li><span class="govuk-!-font-weight-bold">updates page</span> - divided updates over two dates, sub section labels are links</li>
                 </ul>
             </li>
             <li>
