--- a/app/views/7-0/manual-updates.html
+++ b/app/views/7-0/manual-updates.html
@@ -38,28 +38,92 @@ GOV.UK Manual
                     <p class="section-title govuk-!-font-weight-regular">2018</p>
                     <div class="collapsible-subsections">
                         <div class="gem-c-govspeak govuk-govspeak ">
+                            
+                            <!-- 10 December 2018
+                            August 2018 to July 2019 (version 2) -->
                             <h2>
-                                31 July 2018
+                                10 December 2018
                             </h2>
-                            <p class="govuk-!-font-size-24">These are the amendments that were made to {{_thisManual.title}} August 2017 to July 2018.</p>
+                            <p class="govuk-!-font-size-24">August 2018 to July 2019 (version 2)</p>
                             <br>
                             <dl class="updates-list">
                                 {% for section in _thisManual.sections %}
-                                    {% for update in section.updates %}
-                                    <dt>
-                                        {% if loop.index == 1 %}
-                                        <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{section.title}}</a>
-                                        <br><br>
-                                        {% endif %}
-                                        {% if update.title %}
-                                        <span class="govuk-!-font-weight-bold">{{update.title}}</span><br><br>
-                                        {% endif %}
-                                    </dt>
-                                    <dd id="{{update.rule}}">
-                                        {% if update.rule %}<span class="">{{update.rule}}</span> - {% endif %}
-                                        {{update.content}}
-                                    </dd>
-                                    {% endfor %}
+                                    {% if loop.index % 2 == 0 %}
+                                        {% set _titleRendered = false %}
+                                        {% for subsection in section.subsections %}
+                                            {% set _subTitleRendered = false %}
+                                            {% for update in subsection.updates %}
+                                                {% set _updateIndex = loop.index %}
+                                                {% set _updateLast = loop.last %}
+                                                <dt>
+                                                    
+                                                    <!-- Section title -->
+                                                    {% if _titleRendered == false %}
+                                                        {% set _titleRendered = true %}
+                                                        <br>
+                                                        <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{section.title}}</a>
+                                                        <br><br>
+                                                    {% endif %}
+
+                                                    <!-- Sub section title -->
+                                                    {% if _subTitleRendered == false and subsection.type != "main" %}
+                                                        {% set _subTitleRendered = true %}
+                                                        <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}#{{subsection.id}}" class="govuk-link govuk-link--no-visited-state">
+                                                        <span>{{subsection.title}}</span></a>
+                                                        <br><br>
+                                                    {% endif %}
+
+                                                </dt>
+                                                <dd id="{{update.rule}}">
+                                                    
+                                                        {% if update.rule %}<span class="govuk-!-font-weight-bold">{{update.rule|safe}}</span> - {% endif %}
+                                                        {{update.content|safe}}
+
+                                                </dd>
+                                            {% endfor %}
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endfor %}
+                            </dl>
+
+                            <h2>
+                                31 July 2018
+                            </h2>
+                            <p class="govuk-!-font-size-24">August 2018 to July 2019 (version 1)</p>
+                            <br>
+                            <dl class="updates-list">
+                                {% for section in _thisManual.sections %}
+                                    {% if loop.index % 2 != 0 %}
+                                        {% set _titleRendered = false %}
+                                        {% for subsection in section.subsections %}
+                                            {% for update in subsection.updates %}
+                                                {% set _updateIndex = loop.index %}
+                                                {% set _updateLast = loop.last %}
+                                                <dt>
+                                                    
+                                                    <!-- Section title -->
+                                                    {% if _titleRendered == false %}
+                                                    {% set _titleRendered = true %}
+                                                    <br>
+                                                    <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{section.title}}</a>
+                                                    <br><br>
+                                                    {% endif %}
+
+                                                    <!-- Sub section title -->
+                                                    {% if _updateIndex == 1 and subsection.type != "main" %}
+                                                    <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}#{{subsection.id}}" class="govuk-link govuk-link--no-visited-state">
+                                                    <span>{{subsection.title}}</span></a>
+                                                    <br><br>
+                                                    {% endif %}
+
+                                                </dt>
+                                                <dd id="{{update.rule}}">
+                                                    {% if update.rule %}<span class="govuk-!-font-weight-bold">{{update.rule|safe}}</span> - {% endif %}
+                                                    {{update.content|safe}}
+                                                </dd>
+                                            {% endfor %}
+                                        {% endfor %}
+                                    {% endif %}
                                 {% endfor %}
                             </dl>
                         </div>
