hidden subsection level updates on older versions

--- a/app/views/4-0/manual-page.html
+++ b/app/views/4-0/manual-page.html
@@ -84,9 +84,9 @@
                     {% set _sectionHasUpdates = true %}
                 {% endif %}
                 {% for subsection in section.subsections %}
-                    {% if subsection.updates %}
+                {# {% if subsection.updates %}
                         {% set _sectionHasUpdates = true %}
-                    {% endif %}
+                    {% endif %}#}
                     {% for part in subsection.parts %}
                         {% if part.updates %}
                             {% set _sectionHasUpdates = true %}
@@ -162,9 +162,9 @@
 
                                 <!-- Classes for if section contains updates -->
                                 {% set _subsectionClasses = "section-contains-no-updates" %}
-                                {% if subsection.updates %}
+                                {#{% if subsection.updates %}
                                     {% set _subsectionClasses = "" %}
-                                {% endif %}
+                                {% endif %}#}
                                 {% for part in subsection.parts %}
                                     {% if part.updates %}
                                         {% set _subsectionClasses = "" %}
@@ -191,7 +191,7 @@
                                 </h2>
 
                                 <!-- subsection level updates -->
-                                {% if subsection.updates %}
+                                {#{% if subsection.updates %}
                                     <div class="updates call-to-action" style="margin-bottom: 1em">
                                         <!-- <div class="govuk-inset-text" style="padding-top: 0"> -->
                                         {% for update in subsection.updates %}
@@ -203,7 +203,7 @@
                                             {% endif %}
                                         {% endfor %}
                                     </div>
-                                {% endif %}
+                                {% endif %}#}
 
                                 {% if subsection.id == "support-english-maths-training" %}
                                     <!-- Flow chart -->
